--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -4,7 +4,7 @@ import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import FormattedDate from "../components/FormattedDate.astro";
-
+import { withBase } from "../utils/basePath";
 type Props = CollectionEntry<"blog">["data"];
 
 const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
@@ -64,7 +64,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
                             <img
                                 width={1020}
                                 height={510}
-                                src={heroImage}
+                                src={withBase(heroImage)}
                                 alt=""
                             />
                         )
