--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -5,6 +5,7 @@ import "../styles/global.css";
 import { SITE_TITLE } from "../consts";
 import "@fontsource/sansation/400.css";
 import "@fontsource/sansation/700.css";
+import cover from "../assets/cover.jpg";
 
 interface Props {
     title: string;
@@ -14,7 +15,7 @@ interface Props {
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description, image = "/blog-placeholder-1.jpg" } = Astro.props;
+const { title, description, image = cover.src } = Astro.props;
 ---
 
 <!-- Global Metadata -->
