--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -64,7 +64,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
                             <img
                                 width={1020}
                                 height={510}
-                                src={withBase(heroImage)}
+                                src={heroImage.src}
                                 alt=""
                             />
                         )
