--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from "astro:assets";
 import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
@@ -98,7 +99,7 @@ const posts = (await getCollection("posts")).sort(
                                     <img
                                         width={720}
                                         height={360}
-                                        src={withBase(post.data.heroImage)}
+                                        src={post.data.heroImage.src}
                                         alt=""
                                     />
                                     <h4 class="title">{post.data.title}</h4>
