--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,10 +1,9 @@
 ---
 import type { CollectionEntry } from "astro:content";
 import BaseHead from "../components/BaseHead.astro";
-import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import FormattedDate from "../components/FormattedDate.astro";
-import { withBase } from "../utils/basePath";
+import Header from "../components/Header.astro";
 type Props = CollectionEntry<"posts">["data"];
 
 const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
@@ -14,11 +13,6 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
     <head>
         <BaseHead title={title} description={description} />
         <style>
-            main {
-                width: calc(100% - 2em);
-                max-width: 100%;
-                margin: 0;
-            }
             .hero-image {
                 width: 100%;
             }
@@ -28,12 +22,27 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
                 border-radius: 12px;
                 box-shadow: var(--box-shadow);
             }
-            .prose {
-                width: 720px;
+            .prose > :global(*) {
+                width: 56rem;
                 max-width: calc(100% - 2em);
-                margin: auto;
-                padding: 1em;
+                margin-left: auto;
+                margin-right: auto;
+                box-sizing: border-box;
+            }
+            .prose {
                 color: rgb(var(--gray-dark));
+
+                > pre.mermaid {
+                    width: 100%;
+                    max-width: 80rem;
+                    overflow: auto;
+                    display: block;
+                    margin-left: auto;
+                    margin-right: auto;
+                    > svg {
+                        min-width: 42rem;
+                    }
+                }
             }
             .title {
                 margin-bottom: 1em;
