--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,11 +1,11 @@
 ---
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
-import "../styles/global.css";
-import { SITE_TITLE } from "../consts";
 import "@fontsource/sansation/400.css";
 import "@fontsource/sansation/700.css";
 import cover from "../assets/cover.jpg";
+import { SITE_TITLE } from "../consts";
+import "../styles/global.css";
 
 interface Props {
     title: string;
@@ -21,7 +21,7 @@ const { title, description, image = cover.src } = Astro.props;
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="icon" type="image/svg+xml" href="/blog/favicon.svg" />
 <link rel="sitemap" href="/sitemap-index.xml" />
 <link
     rel="alternate"
