--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -24,34 +24,22 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
             }
             .prose > :global(*) {
                 width: 56rem;
-                max-width: calc(100% - 2em);
+                max-width: calc(100% - 2rem);
                 margin-left: auto;
                 margin-right: auto;
                 box-sizing: border-box;
             }
             .prose {
                 color: rgb(var(--gray-dark));
-
-                > pre.mermaid {
-                    width: 100%;
-                    max-width: 80rem;
-                    overflow: auto;
-                    display: block;
-                    margin-left: auto;
-                    margin-right: auto;
-                    > svg {
-                        min-width: 42rem;
-                    }
-                }
             }
             .title {
                 margin-bottom: 1em;
-                padding: 1em 0;
+                padding: 2em 0;
                 text-align: center;
                 line-height: 1;
             }
             .title h1 {
-                margin: 0 0 0.5em 0;
+                margin: 0.5em 0;
             }
             .date {
                 margin-bottom: 0.5em;
@@ -60,6 +48,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
             .last-updated-on {
                 font-style: italic;
             }
+
         </style>
     </head>
 
@@ -81,6 +70,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
                 </div>
                 <div class="prose">
                     <div class="title">
+                        <h1>{title}</h1>
                         <div class="date">
                             <FormattedDate date={pubDate} />
                             {
@@ -92,8 +82,6 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
                                 )
                             }
                         </div>
-                        <h1>{title}</h1>
-                        <hr />
                     </div>
                     <slot />
                 </div>
