--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,92 +1,37 @@
 ---
 import type { CollectionEntry } from "astro:content";
 import BaseHead from "../components/BaseHead.astro";
+import BlogPostHeader from "../components/BlogPostHeader.astro";
+import BlogPostHeroImage from "../components/BlogPostHeroImage.astro";
+import BlogPostProse from "../components/BlogPostProse.astro";
+import BlogPostProseHeader from "../components/BlogPostProseHeader.astro";
 import Footer from "../components/Footer.astro";
-import FormattedDate from "../components/FormattedDate.astro";
-import Header from "../components/Header.astro";
 type Props = CollectionEntry<"posts">["data"];
 
-const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
+const post = Astro.props;
+const { title, description, heroImage } = post;
 ---
 
 <html lang="en">
-    <head>
-        <BaseHead title={title} description={description} />
-        <style>
-            .hero-image {
-                width: 100%;
-            }
-            .hero-image img {
-                display: block;
-                margin: 0 auto;
-                border-radius: 12px;
-                box-shadow: var(--box-shadow);
-            }
-            .prose > :global(*) {
-                width: 56rem;
-                max-width: calc(100% - 2rem);
-                margin-left: auto;
-                margin-right: auto;
-                box-sizing: border-box;
-            }
-            .prose {
-                color: rgb(var(--gray-dark));
-            }
-            .title {
-                margin-bottom: 1em;
-                padding: 2em 0;
-                text-align: center;
-                line-height: 1;
-            }
-            .title h1 {
-                margin: 0.5em 0;
-            }
-            .date {
-                margin-bottom: 0.5em;
-                color: rgb(var(--gray));
-            }
-            .last-updated-on {
-                font-style: italic;
-            }
+  <head>
+    <BaseHead title={title} description={description} />
+  </head>
 
-        </style>
-    </head>
-
-    <body>
-        <Header />
-        <main>
-            <article>
-                <div class="hero-image">
-                    {
-                        heroImage && (
-                            <img
-                                width={1020}
-                                height={510}
-                                src={heroImage.src}
-                                alt=""
-                            />
-                        )
-                    }
-                </div>
-                <div class="prose">
-                    <div class="title">
-                        <h1>{title}</h1>
-                        <div class="date">
-                            <FormattedDate date={pubDate} />
-                            {
-                                updatedDate && (
-                                    <div class="last-updated-on">
-                                        Last updated on{" "}
-                                        <FormattedDate date={updatedDate} />
-                                    </div>
-                                )
-                            }
-                        </div>
-                    </div>
-                    <slot />
-                </div>
-            </article>
-        </main>
-        <Footer />
-    </body>
+  <body>
+    <BlogPostHeader />
+    <main>
+      <article>
+        <BlogPostHeroImage
+          image={heroImage}
+        />
+        <BlogPostProse>
+          <BlogPostProseHeader
+            post={post}
+          />
+          <slot />
+        </BlogPostProse>
+      </article>
+    </main>
+    <Footer />
+  </body>
 </html>
