--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -132,6 +132,10 @@
     letter-spacing: -0.005em;
   }
 
+  .expressive-code {
+    margin-bottom: 2rem;
+  }
+
   ol {
     padding-left: 1.5em;
     padding-top: 1rem;
