fix: update styling

--- a/src/components/BlogIndexPost.astro
+++ b/src/components/BlogIndexPost.astro
@@ -45,7 +45,7 @@ const markedDescription = await marked.parseInline(post.description);
   padding: 1rem;
   border-radius: 0.5rem;
 
-  cursor: default;
+  cursor: pointer;
   transition: background-color 0.15s ease-out;
   background-color: rgba(235,235,235, 0);
   @media (hover: hover) and (pointer: fine) {
