--- a/src/components/BlogPostHeader.astro
+++ b/src/components/BlogPostHeader.astro
@@ -1,11 +1,11 @@
 ---
+import BlogPostHeaderBackButton from "./BlogPostHeaderBackButton.astro";
 import Header from "./Header.astro";
-import HeaderBrandLink from "./HeaderBrandLink.astro";
 ---
 
 <Header>
   <nav>
-    <HeaderBrandLink />
+    <BlogPostHeaderBackButton />
   </nav>
 </Header>
 <style>
