--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -6,6 +6,9 @@ import BlogPostHeroImage from "../components/BlogPostHeroImage.astro";
 import BlogPostProse from "../components/BlogPostProse.astro";
 import BlogPostProseHeader from "../components/BlogPostProseHeader.astro";
 import Footer from "../components/Footer.astro";
+import IconBackChevronLeft from "../components/IconBackChevronLeft.astro";
+import { withBase } from "../utils/basePath";
+
 type Props = CollectionEntry<"posts">["data"];
 
 const post = Astro.props;
@@ -36,6 +39,23 @@ const { title, description, heroImage } = post;
         </BlogPostProse>
       </article>
     </main>
+    <div class="container">
+      <IconBackChevronLeft />
+      <a href={withBase("/")} title="Back to root">
+        back
+      </a>
+    </div>
     <Footer />
   </body>
 </html>
+
+<style>
+.container {
+  width: 56rem;
+  max-width: calc(100% - 2rem);
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 12rem;
+  padding-bottom: 4rem;
+}
+</style>
