--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -17,6 +17,8 @@
   h4,
   h5,
   h6 {
+    padding-top: 4rem;
+    margin-top: -4rem;
     margin: 0 0 0.5rem 0;
     margin-left: auto;
     margin-right: auto;
@@ -44,7 +46,8 @@
     span.icon-link::before {
       content: '#';
       font-size: 0.8em;
-      margin-left: -1.125em;
+      margin-left: -1.75rem;
+      padding-right: 0.25rem;
     }
   }
   h1 {
@@ -53,12 +56,10 @@
   }
   h2 {
     font-size: 2.441em;
-    margin-top: 6rem;
     margin-bottom: 4rem;
   }
   h3 {
     font-size: 1.953em;
-    margin-top: 4rem;
     margin-bottom: 2rem;
   }
   h4 {
@@ -91,6 +92,7 @@
   table {
     border-collapse: collapse;
     margin-bottom: 2em;
+    font-size: 1rem;
   }
 
   th, td {
@@ -156,7 +158,7 @@
   blockquote {
     border-left: 4px solid var(--accent);
     padding: 0 0 0 20px;
-    font-size: 1.333em;
+    font-size: 0.95em;
   }
   hr {
     border: none;
