--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,13 +1,12 @@
 ---
 import type { CollectionEntry } from "astro:content";
 import BaseHead from "../components/BaseHead.astro";
+import BlogPostFooter from "../components/BlogPostFooter.astro";
 import BlogPostHeader from "../components/BlogPostHeader.astro";
 import BlogPostHeroImage from "../components/BlogPostHeroImage.astro";
 import BlogPostProse from "../components/BlogPostProse.astro";
 import BlogPostProseHeader from "../components/BlogPostProseHeader.astro";
 import Footer from "../components/Footer.astro";
-import IconBackChevronLeft from "../components/IconBackChevronLeft.astro";
-import { withBase } from "../utils/basePath";
 
 type Props = CollectionEntry<"posts">["data"];
 
@@ -39,23 +38,7 @@ const { title, description, heroImage } = post;
         </BlogPostProse>
       </article>
     </main>
-    <div class="container">
-      <IconBackChevronLeft />
-      <a href={withBase("/")} title="Back to root">
-        back
-      </a>
-    </div>
+    <BlogPostFooter />
     <Footer />
   </body>
 </html>
-
-<style>
-.container {
-  width: 56rem;
-  max-width: calc(100% - 2rem);
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 12rem;
-  padding-bottom: 4rem;
-}
-</style>
