--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -1,7 +1,7 @@
 ---
-import { type CollectionEntry, getCollection } from "astro:content";
+import { type CollectionEntry, getCollection, render } from "astro:content";
+import Table from "../../components/mdx/Table.astro";
 import BlogPost from "../../layouts/BlogPost.astro";
-import { render } from "astro:content";
 
 export async function getStaticPaths() {
     const posts = await getCollection("posts");
@@ -17,5 +17,9 @@ const { Content } = await render(post);
 ---
 
 <BlogPost {...post.data}>
-    <Content />
+  <Content
+    components={{
+      table: Table
+    }}
+  />
 </BlogPost>
